[gd_scene load_steps=10 format=2]

[ext_resource path="res://scenes/player.gd" type="Script" id=1]
[ext_resource path="res://scenes/test_scene_assets/arrow.png" type="Texture" id=2]
[ext_resource path="res://scenes/test_scene_assets/astronaut.png" type="Texture" id=3]
[ext_resource path="res://scenes/test_scene_assets/aiming_bar_over.png" type="Texture" id=4]
[ext_resource path="res://scenes/test_scene_assets/aiming_bar_fill.png" type="Texture" id=5]

[sub_resource type="Curve" id=2]
max_value = 200.0
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 0.739865, 200 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=3]
curve = SubResource( 2 )

[sub_resource type="ParticlesMaterial" id=4]
lifetime_randomness = 0.3
emission_shape = 1
emission_sphere_radius = 8.0
flag_disable_z = true
direction = Vector3( 0, 1, 0 )
spread = 10.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 120.0
initial_velocity_random = 0.2
orbit_velocity = 0.0
orbit_velocity_random = 0.0
damping_curve = SubResource( 3 )
scale = 2.0
color = Color( 0.470588, 0.490196, 0.858824, 1 )

[sub_resource type="CapsuleShape2D" id=1]
radius = 12.0

[node name="player" type="RigidBody2D"]
collision_mask = 6
mode = 2
mass = 10.0
script = ExtResource( 1 )

[node name="jet_particles" type="Particles2D" parent="."]
unique_name_in_owner = true
emitting = false
amount = 16
lifetime = 0.5
process_material = SubResource( 4 )

[node name="player_camera" type="Camera2D" parent="."]
unique_name_in_owner = true
current = true
zoom = Vector2( 1.5, 1.5 )

[node name="player_collision" type="CollisionShape2D" parent="."]
position = Vector2( 0, 4 )
shape = SubResource( 1 )

[node name="player_base_sprite" type="Sprite" parent="."]
texture = ExtResource( 3 )

[node name="aiming_arrow" type="Sprite" parent="."]
unique_name_in_owner = true
scale = Vector2( 2, 2 )
texture = ExtResource( 2 )

[node name="aiming_bar" type="TextureProgress" parent="."]
unique_name_in_owner = true
margin_left = -32.0
margin_top = 32.0
margin_right = 32.0
margin_bottom = 40.0
rect_scale = Vector2( 1.5, 1.5 )
rect_pivot_offset = Vector2( 32, 4 )
value = 50.0
texture_over = ExtResource( 4 )
texture_progress = ExtResource( 5 )
tint_progress = Color( 0.176471, 0.905882, 0.0901961, 1 )
